DevTools: Fix buttons alignment in the audits panel
NOTRY=true

Review URL: https://codereview.chromium.org/460953002

git-svn-id: svn://svn.chromium.org/blink/trunk@180048 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/auditsPanel.css
+++ b/front_end/auditsPanel.css
@@ -66,7 +66,9 @@
 
 .audit-launcher-view div.button-container > button {
     -webkit-align-self: flex-start;
-    margin: 5px;
+    margin-right: 10px;
+    margin-bottom: 5px;
+    margin-top: 5px;
 }
 
 .audit-launcher-view fieldset.audit-categories-container {
